# umi-collapse-rs

./: .gitignore  README.md  build.sh  config.yaml  environemnt.yml  index.sh  snakeless.sh  snakeless_1.sh  snakeless_2.sh  tmpfs.sh  vtune.sh
.github/workflows/: ci.yml
hisat-3n/: .gitignore  Makefile  hi_aligner.h  hisat2.cpp  pat.cpp  simple_timer.h
m5C-UBSseq-0.1/: Snakefile  config.yaml
samtools-1.21/: .gitignore  Makefile
src/: main.rs
src/algo/: adjacency.rs  directional.rs  mod.rs
src/data/: combo.rs  mod.rs
src/utils/: mod.rs  read_freq.rs
steps/: data_clean.sh  dedup_index.sh  dedup_mapping.sh  filtered_multi.sh  filtered_uniq.sh  filtering.sh  genome_align.sh  join_pileup.sh  rna_align.sh  sam_after_rna_align.sh  sam_sort.sh  stat_mapping_num.sh  unfiltered_multi.sh  unfiltered_uniq.sh
umicollapse/: .gitignore  Cargo.toml  job.slurm
umicollapse/src/: cli.rs  deduplicate_sam.rs  main.rs
umicollapse/src/algo/: adjacency.rs  directional.rs  mod.rs  parallel_adjacency.rs  parallel_directional.rs
umicollapse/src/data/: combo.rs  mod.rs  naive.rs  parallel_naive.rs
umicollapse/src/merge/: mod.rs
umicollapse/src/utils/: bitset.rs  cluster_tracker.rs  mod.rs  read.rs  read_freq.rs  umi_freq.rs
