[package]
name = "umicollapse"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
downcast-rs = "2.0.1"
lazy_static = "1.5.0"
pcre2 = "0.2.9"
rayon = "1.10.0"
rust-htslib = "0.49.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
